  Summer-of-Code project. Gdb's "handle" and "signal" commands.

* Add hard kill. May be needed for thread debugging.

* Start thread debugging: 
    info thread [thread-name] [terse|verbose]    - show thread info
    thread [thread-name [thread-name]...]  - switches thread
    qt                                     - quit current thread

1.17 2006-07-29
* Allow entry to the debugger without a script name.

* "examine" command output shows object attributes.
  There is a routine common to both examine and display.

* "whatis" shows doc strings if there is one.

* Fix a bug where we would get the wrong path in
  tracing through an "import x as y". This happened only if we invoked
  from a directory other than where the debugged program lives and we
  stepped into such an imported method. The fix is to save the the
  dirname of the script in the debugger instance variable.

* Fix bug when using set trace introduced in 1.16 in adding "command".

* Add gdb "directory" and "show directories" commands. 

* All "show" and "info" commands allow unique abbreviations in the
  subcommand name and in help. E.g. "show dir" for "show directories";
  "help dir" for "help directories".

* The "turn-on-pydbtrack" command turns removes py-pdbtrack from
  comint-output-filter-functions which was removing the cursor in the
  source window. Some small bugs removed from turn-on-pydbtrack.

* Tested on Python versions 2.3.4, 2.3.5, 2.4, 2.4.3, and 2.5.b1 on
  cygwin FreeBSD, GNU/Linux, NetBSD, OSX and Solaris.

* Add a subcommand class. Used in "set", "show", "info" (and possibly more
  down the line). As a result help output now more closely resembles
  gdb's. Thanks to Matt Fleming for finishing what I started.

* More fexible and more general output by no longer assuming we
  write to sys.stdout. Rather the output object is saved in the
  instance variable, which could be and often is the same as
  sys.stdout, but doesn't need to be. This change may make