@@ -1,4 +1,4 @@
-"""$Id: gdb.py.in,v 1.71 2006/09/16 14:55:37 rockyb Exp $
+"""$Id: gdb.py.in,v 1.72 2006/09/16 16:15:53 rockyb Exp $
 Handles gdb-like command processing.
 (See also @PACKAGE_NAME@.doc for documentation.)"""
 
@@ -88,7 +88,7 @@ class Gdb(Bdb, Cmd, SubcmdInfo, SubcmdSet, SubcmdShow):
         # self.trace_dispatch are changed depending on the value of
         # 'set sigcheck'.  We may "decorate", in the design pattern
         # sense, the routines from bdb, so we need to save them.
-        self.break_anywhere_bdb  = Bdb.break_anywhere
+        self.break_anywhere_old  = self.break_anywhere
         self.set_continue_old    = self.set_continue
         self.trace_dispatch_old  = self.trace_dispatch
 
@@ -159,6 +159,7 @@ class Gdb(Bdb, Cmd, SubcmdInfo, SubcmdSet, SubcmdShow):
         """Check to see if the signal handler's we are interested have
         changed. If so we'll intercept them. """
         self.sigmgr.check_and_adjust_sighandlers()
+        self.setup(frame)
         return self.trace_dispatch_old(frame, event, arg)
 
     def __adjust_frame(self, pos, absolute_pos):
